# realtime-financial-pipeline-prism-integrated

./: .gitignore  BUILD_AND_RUN.md  CLEANUP_REPORT.md  CMakeLists.benchmark.txt  CMakeLists.txt  CMakeLists.txt.bak  FIX_REPORT.md  PRISM_INTEGRATION.md  PRODUCTION_FLOW.md  README.md  WINDOWS_FIX_AND_RUN.md  docker-compose.yml  market_data_pb2.py  prometheus.yml
config/: setup_submission.json
consumer/: consumer.py
cpp_engine/benchmarks/: benchmark_engine.cpp
cpp_engine/src/: consumer.cpp  engine.cpp  engine_shared.hpp  live_binance_engine.cpp  order_book.hpp  prism_backtest.cpp  prism_live_engine.cpp  prism_live_engine.hpp  prism_strategy.cpp  prism_strategy.hpp  producer.cpp  time_utils.hpp  trade_manager.cpp  trade_manager.hpp
cpp_engine/src/connectors/: BinanceClient.cpp  BinanceClient.h
data/: sample_market_data.csv
outputs/prism/: audit_log.json  backtest_summary.json  entry_intent_log.csv  setup_score_log.csv  setup_validation_report.json  trade_log.csv
producer/: producer.py
proto/: market_data.proto
tests/: load_test.py
